# self-hosting-webassembly

./: .gitignore  README.md  candidates.md  manifest.toml
compilers/assemblyscript/: build.sh  notes.md
compilers/schism/: notes.md
compilers/wa/: UPSTREAM  build.sh  notes.md
compilers/waforth/: UPSTREAM  build.sh  notes.md
compilers/webcc/: UPSTREAM
compilers/webcc/src/benchmark/: run.sh
compilers/xcc/: UPSTREAM  build.sh  notes.md  run-cc.sh
compilers/zig/: UPSTREAM  build.sh  notes.md
experiments/self-hosting-compilers/: .dockerignore  .gitignore  Dockerfile
experiments/self-hosting-compilers/compilers/assemblyscript/: UPSTREAM  run-asc.sh
experiments/self-hosting-compilers/compilers/basic_rs/: UPSTREAM  notes.md
experiments/self-hosting-compilers/compilers/schism/: UPSTREAM  build.sh
experiments/self-hosting-compilers/compilers/waforth/: build-host.sh
experiments/self-hosting-compilers/scripts/: build-wasm3.sh  confirm-selfhost.sh
runtimes/: .gitignore  README.md  ROADMAP.md  showcase.sh  survey.md
runtimes/binaryen/: UPSTREAM  demo-in-wasm.sh  notes.md  to-wasm.sh
runtimes/fizzy/: UPSTREAM  byte_char_traits.hpp  demo-in-wasm.sh  fizzy-run.c  notes.md  to-wasm.sh
runtimes/scripts/: setup-wasi-sdk.sh
runtimes/toywasm/: UPSTREAM  build.sh  demo-wasm-in-wasm.sh  demo.sh  notes.md  to-wasm.sh
runtimes/w2c2/: UPSTREAM  build.sh  demo-in-wasm.sh  demo.sh  devirt.sh  notes.md  to-wasm.sh
runtimes/wabt/: UPSTREAM  demo-in-wasm.sh  demo-interp-in-wasm.sh  notes.md  to-wasm.sh
runtimes/wac/: UPSTREAM  build.sh  hello_unstable.wat  notes.md  run.sh  tcc_builtins.h
runtimes/wamr/: CMakeLists.txt  UPSTREAM  demo-in-wasm.sh  iwasm-run.c  notes.md  to-wasm.sh
runtimes/wamr/wasi-platform/: platform_internal.h  shared_platform.cmake  wasi_platform.c
runtimes/wasm-tools/: UPSTREAM  demo-in-wasm.sh  notes.md  to-wasm.sh
runtimes/wasm3/: UPSTREAM  demo-in-wasm.sh  hello_p1.wat  notes.md  to-wasm.sh  wasi_shim.c
runtimes/wasmi/: UPSTREAM  demo-in-wasm.sh  notes.md  to-wasm.sh
runtimes/wasmi/runner/: Cargo.toml
runtimes/wasmi/runner/src/: main.rs
runtimes/wasmtime/: UPSTREAM  demo-in-wasm.sh  notes.md  to-wasm.sh
runtimes/wasmtime/runner/: Cargo.toml
runtimes/wasmtime/runner/src/: main.rs
runtimes/wazero/: UPSTREAM  demo-in-wasm.sh  notes.md  to-wasm.sh
runtimes/wcpl/: UPSTREAM  demo-in-wasm.sh  notes.md  to-wasm.sh
scripts/: build-wasm3.sh  vendor.sh  verify.sh
(+19 files in other folders)
